More Tests and Print Outputs
- Added additional test cases to cover edge scenarios.
- Implemented functionality to display more detailed information during testing
- Updated test output formatting for clarity.